--- a/Cap.Web/Content/Site.css
+++ b/Cap.Web/Content/Site.css
@@ -22,3 +22,96 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.white {
+    color: #fff;
+}
+
+.gray {
+    color:#999;
+}
+
+.gray a {
+    color:#999;
+}
+.gray a:link {
+    color:#999;
+}
+.gray a:hover {
+    color:#fff;
+}
+.gray a:focus {
+    color:#fff;
+}
+
+.left40 a .gray:focus {
+    color:#fff;
+}
+
+/* tops */
+.top { vertical-align:top; }
+
+.top5 { margin-top: 5px; }
+.top10 { margin-top: 10px; }
+.top15 { margin-top: 15px; }
+.top17 { margin-top: 17px; }
+.top20 { margin-top: 20px; }
+.top30 { margin-top: 30px; }
+.top40 { margin-top: 40px; }
+.top50 { margin-top: 50px; }
+.top60 { margin-top: 60px; }
+
+/* left */
+.left5 { margin-left: 5px;}
+.left10 { margin-left: 10px; }
+.left15 { margin-left: 15px; }
+.left17 { margin-left: 17px; }
+.left20 { margin-left: 20px; }
+.left30 { margin-left: 30px; }
+.left40 { margin-left: 40px; }
+.left50 { margin-left: 50px; }
+.left60 { margin-left: 60px; }
+
+.pleft5 { padding-left: 5px;}
+.pleft10 { padding-left: 10px; }
+.pleft15 { padding-left: 15px; }
+.pleft17 { padding-left: 17px; }
+.pleft20 { padding-left: 20px; }
+.pleft30 { padding-left: 30px; }
+.pleft40 { padding-left: 40px; }
+.pleft50 { padding-left: 50px; }
+.pleft60 { padding-left: 60px; }
+
+/* width */
+.w50 { width: 50% }
+
+/* Set width on the form input elements since they're 100% wide by default */
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+/* styles for validation helpers */
+.field-validation-error {
+    color: #b94a48;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+input.input-validation-error {
+    border: 1px solid #b94a48;
+}
+
+input[type="checkbox"].input-validation-error {
+    border: 0 none;
+}
+
+.validation-summary-errors {
+    color: #b94a48;
+}
+
+.validation-summary-valid {
+    display: none;
