--- a/Cap.Web/Areas/Erp/Views/FPgto/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/FPgto/Edit.cshtml
@@ -14,6 +14,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.IdEmpresa)
+        @Html.HiddenFor(model => model.AlteradoPor)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
