--- a/Cap.Web/Areas/Erp/Views/Banco/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Banco/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model Cap.Domain.Models.Cap.Pgto
+﻿@model Cap.Domain.Models.Cap.Banco
 
 @{
-    ViewBag.Title = "Pagável em";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Pagável em</h2>
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
@@ -14,8 +14,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
-        @Html.HiddenFor(model => model.AlteradoPor)
         @Html.HiddenFor(model => model.IdEmpresa)
+        @Html.HiddenFor(model => model.AlteradoPor)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,12 +26,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Imposto, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Razao, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Imposto)
-                    @Html.ValidationMessageFor(model => model.Imposto, "", new { @class = "text-danger" })
-                </div>
+                @Html.EditorFor(model => model.Razao, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Razao, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.NumFebraban, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NumFebraban, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NumFebraban, "", new { @class = "text-danger" })
             </div>
         </div>
 
