--- a/Cap.Web/Areas/Erp/Views/FPgto/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/FPgto/Create.cshtml
@@ -11,9 +11,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>FPgto</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.IdEmpresa)
+        @Html.HiddenFor(model => model.AlteradoPor)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
