--- a/Cap.Web/Areas/Erp/Views/Feriado/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Feriado/Create.cshtml
@@ -1,17 +1,18 @@
 ﻿@model Cap.Domain.Models.Admin.Feriado
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Feriado";
 }
 
-<h2>Create</h2>
+<h2>Feriado</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.IdEmpresa)
+    @Html.HiddenFor(model => model.AlteradoPor)
     
     <div class="form-horizontal">
-        <h4>Feriado</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
