--- a/Cap.Web/Areas/Erp/Views/Login/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Login/Index.cshtml
@@ -30,7 +30,7 @@
                                             <span class="input-group-addon">
                                                 <i class="glyphicon glyphicon-user"></i>
                                             </span>
-                                            @Html.TextBoxFor(x => x.Login, new { @class = "form-control", @placeholder = "Usuário", @autofocus = true })
+                                            @Html.TextBoxFor(x => x.Email, new { @class = "form-control", @placeholder = "Email", @autofocus = true })
                                         </div>
                                     </div>
                                     <div class="form-group">
