--- a/Cap.Web/Areas/Erp/Views/Pgto/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pgto/Create.cshtml
@@ -9,6 +9,8 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.IdEmpresa)
+    @Html.HiddenFor(model => model.AlteradoPor)
     
     <div class="form-horizontal">
         <h4>Pgto</h4>
