--- a/Cap.Web/Areas/Erp/Views/Usuario/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Usuario/Edit.cshtml
@@ -17,6 +17,7 @@
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.CadastradoEm)
         @Html.HiddenFor(model => model.ExcluidoEm)
+        @Html.HiddenFor(model => model.IdEmpresa)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -31,14 +32,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Login, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
             </div>
         </div>
 
