--- a/Cap.Web/Areas/Erp/Views/Agenda/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Agenda/Index.cshtml
@@ -15,7 +15,7 @@
                 @Html.TextBox("nome", (string)ViewBag.Nome, new { @class = "form-control" })
             </div>
             <div class="col-md-8 top20">
-                <input type="button" id="pesquisar" value="Pesquisar" class="btn btn-primary" />
+                <input type="button" id="pesquisar" name="pesquisar" value="Pesquisar" class="btn btn-primary" />
             </div>
         </div>
     </p>
