--- a/Cap.Web/Areas/Erp/Views/Agenda/Contatos.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Agenda/Contatos.cshtml
@@ -33,9 +33,7 @@
             @{ Html.RenderAction("Emails", "Email", new { idAgenda = item.Id }); }
         </td>
         <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Excluir", "Delete", new { id=item.Id })
+            | @Html.ActionLink("Detalhes", "Details", new { id=item.Id, nome = (string)ViewBag.Nome }) |
         </td>
     </tr>
 }
