--- a/Cap.Web/Areas/Erp/Views/Material/Materiais.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Material/Materiais.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Cap.Domain.Models.Requisicao.Material>
 
 <p class="top20">
-    @Html.ActionLink("Novo", "Create", new { pesquisa = ViewBag.Pesquisa })
+    @Html.ActionLink("Novo material", "Create", new { pesquisa = ViewBag.Pesquisa })
 </p>
 
 <table class="table">
