--- a/Cap.Web/Areas/Erp/Views/Parcela/Parcelas.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/Parcelas.cshtml
@@ -155,11 +155,15 @@
             @Html.DisplayFor(modelItem => item.AlteradoEm)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <button class="btn btn-default details" data-id="@item.Id"><i class="glyphicon glyphicon-file"></i></button>
+            <button class="btn btn-danger delete" data-id="@item.Id"><i class="glyphicon glyphicon-trash"></i></button>
+            <button class="btn btn-primary edit" data-id="@item.Id"><i class="glyphicon glyphicon-edit"></i></button>
+
+            <br />
+            <div class="details">Teste</div>
         </td>
     </tr>
 }
 
 </table>
+}
